--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <!--TODO add application class-->
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -15,8 +15,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Gallery_test"
         tools:targetApi="31">
-        <!--TODO привести в порядок манифест-->
-        <!--TODO почитать про exported-->
         <activity
             android:name=".view.MainActivity"
             android:exported="true">
