--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,11 +50,11 @@ dependencies {
 
     //lifecycle
     implementation 'androidx.lifecycle:lifecycle-viewmodel:2.3.1'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0-alpha03'
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
 
     //recyclerView
-    implementation("androidx.recyclerview:recyclerview:")
-    implementation("androidx.recyclerview:recyclerview-selection:1.1.0")
+    implementation "androidx.recyclerview:recyclerview:1.2.1"
 
     //RXjava
     implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
@@ -82,5 +82,14 @@ dependencies {
     //Dagger
     implementation 'com.google.dagger:dagger:2.46.1'
     kapt 'com.google.dagger:dagger-compiler:2.46.1'
-}
 
+    //Room
+    implementation("androidx.room:room-runtime:2.5.2")
+    kapt "androidx.room:room-compiler:2.5.2"
+
+    // Coroutine support for Room
+    implementation "androidx.room:room-ktx:2.5.2"
+
+    //fragment
+    implementation "androidx.fragment:fragment-ktx:1.3.6"
+}
